add permisisons and role
